fix alignment in footer

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -297,6 +297,9 @@ section#links-section a {
 
 footer {
     padding: 1rem;
+}
+
+.footer {
     text-align: center;
 }
 
